2008-02-26  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* docs/*: 
	Extended Docbook build mechanism to support CSS.

2008-02-26  Martin Leidig  <mleidig@schlund.de>

	Added support for merging/overriding statusmessages coming from
	modules. Therefore the dyntxt/statusmessages.xml files in the 
	projects/modules/<module> directories are merged into the according
	projects/modules-override/<module>/dyntxt/statusmessages-merged.xml
	files.
	
	* src/de/schlund/pfixcore/util/MergeTask.java: New ant task for
	merging statusmessage files
	* src/de/schlund/pfixxml/util/FileUtils.java: New utility class
	for file handling stuff
	* skel/build-skel.xml: Added task definition for MergeTask, added merge
	targets scmerge-core and scmerge-modules
	* src/de/schlund/pfixcore/util/Merge.java: Added 'verbose' option
	to disable output

2008-02-26  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
	
	Removed storage of last page / last flow information in session. Last flow 
	is passed using a request parameter and page should always be present in the
	request path.

2008-02-24  schst  <schst@stubbles.net>

	* src/de/schlund/pfixcore/util/TransformerCallback.java: added new method
	which returns a nodelist containing all roles of the current session
	* projects/core/xsl/xmlfontify.xsl: added XSLT which retrieves the roles 
	from the current session and shows the data in a table

2008-02-22  jtl  <jtl@schoenberg.laudi.ka>

	* src/de/schlund/pfixxml/resources/internal/DocrootResourceOnFileSystemImpl.java (toURL): 
	toURL is deprecated for file, use toURI().toURL()

2008-02-22  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* .classpath: 
	* lib/spring-2.0.7.jar: 
	* lib/spring-2.5.1.jar: 
	Updated Spring to release 2.5.1.

2008-02-22  Sebastian Marsching  <sebastian.marsching@1und1.de>
