@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0">
   <xsl:import href="../docbook-xsl-ns/html/docbook.xsl"/>
+  <xsl:import href="style-highlight.xsl"/>
   <xsl:param name="section.autolabel" select="1"/>
   <xsl:param name="section.autolabel.max.depth" select="1"/>
   <xsl:param name="section.label.includes.component.label" select="1"/>
